name:                piparser-common
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/piparser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PIParser.ClangUtils PIParser.DataTypes PIParser.FunctionList PIParser.Templates PIParser.ConstMap PIParser.Function
  ghc-options:
  build-depends:       base >= 4.7 && < 5
                    ,  LibClang == 3.4.0
                    ,  containers
                    ,  transformers
                    ,  vector
                    ,  bytestring
                    ,  regex-tdfa
                    ,  text
                    ,  aeson
                    ,  template-haskell
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/piparser
