name:                piparser-tree
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/piparser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable piparser-tree
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                    ,  LibClang == 3.4.0
                    ,  containers
                    ,  transformers
                    ,  vector
                    ,  filemanip
                    ,  bytestring
                    ,  regex-tdfa
                    ,  text
                    ,  aeson
                    ,  template-haskell
                    ,  piparser-common
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/piparser
